syntax = "proto3";

package api;

import "base.proto";

message DiscoveryRequest {
    string targetName = 1;

    string traceId = 2;
}